# AINet

./: README.md
projeto/: CMakeLists.txt  sdkconfig
projeto/main/: CMakeLists.txt  cert.pem  program.c
